Creating the pad's number

--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/CSS/normalize.css">
+    <link rel="stylesheet" href="assets/CSS/reset.css">
+
+    <link rel="stylesheet" href="assets/CSS/display-style.css">
+
+    <!-- Fonts -->
+
+
     <title>Calculator</title>
 </head>
 <body>
 
-    <section class="calculator container">
+    <section class="calculator-container">
         <div class="display-screen">
-            
+            <span class="display-numbers--calc" id="calc">100</span>
+            <span class="display-numbers--result" id="result">100</span>
         </div>
-        <div>
-
+        <div class="number-container">
+            <div class="numbers">
+                <!-- ul>li.buttons{textValue $}*5 -->
+                <ul>
+                    <li class="buttons-n">9</li>
+                    <li class="buttons-n">8</li>
+                    <li class="buttons-n">7</li>
+                    <li class="buttons-n">6</li>
+                    <li class="buttons-n">5</li>
+                    <li class="buttons-n">4</li>
+                    <li class="buttons-n">3</li>
+                    <li class="buttons-n">2</li>
+                    <li class="buttons-n">1</li>
+                    <li class="buttons-n">0</li>
+                    <li class="buttons-n">.</li>
+                    <li class="buttons-n">=</li>
+                </ul>
+            </div>
         </div>
 
     </section>
