Creating the operations pad

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/CSS/display-style.css">
 
     <!-- Fonts -->
-
+    <script src="https://kit.fontawesome.com/9eaf1d90d0.js" crossorigin="anonymous"></script>
 
     <title>Calculator</title>
 </head>
@@ -39,6 +39,16 @@
                     <li class="buttons-n">0</li>
                     <li class="buttons-n">.</li>
                     <li class="buttons-n">=</li>
+                </ul>
+            </div>
+            <div class="operations">
+                <ul>
+                    <i class="fa-solid fa-plus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-xmark"></i>
+                    <i class="fa-solid fa-divide"></i>
+                    <i class="fa-solid fa-percent"></i>
+                    <i class="fa-solid fa-square-root"></i>
                 </ul>
             </div>
         </div>
