Adding the css of the operation's buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/CSS/reset.css">
 
     <link rel="stylesheet" href="assets/CSS/display-style.css">
+    <link rel="stylesheet" href="assets/CSS/operations-style.css">
 
     <!-- Fonts -->
     <script src="https://kit.fontawesome.com/9eaf1d90d0.js" crossorigin="anonymous"></script>
