--- a/index.html
+++ b/index.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/CSS/normalize.css">
-    <link rel="stylesheet" href="assets/CSS/reset.css">
+    <link rel="stylesheet" href="assets/CSS/normalize.css" />
+    <link rel="stylesheet" href="assets/CSS/reset.css" />
 
-    <link rel="stylesheet" href="assets/CSS/display-style.css">
-    <link rel="stylesheet" href="assets/CSS/operations-style.css">
+    <link rel="stylesheet" href="assets/CSS/display-style.css" />
+    <link rel="stylesheet" href="assets/CSS/operations-style.css" />
 
     <!-- Fonts -->
-    <script src="https://kit.fontawesome.com/9eaf1d90d0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9eaf1d90d0.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Calculator</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <section class="calculator-container">
-        <div class="display-screen">
-            <span class="display-numbers--calc" id="calc">100</span>
-            <span class="display-numbers--result" id="result">100</span>
+      <div class="display-screen">
+        <span class="display-numbers--calc" id="calc">100</span>
+        <span class="display-numbers--result" id="result">100</span>
+      </div>
+      <div class="pads-container">
+        <div class="">
+          <!-- ul>li.buttons{textValue $}*5 -->
+          <ul class="numbers">
+            <li class="buttons-n">9</li>
+            <li class="buttons-n">8</li>
+            <li class="buttons-n">7</li>
+            <li class="buttons-n">6</li>
+            <li class="buttons-n">5</li>
+            <li class="buttons-n">4</li>
+            <li class="buttons-n">3</li>
+            <li class="buttons-n">2</li>
+            <li class="buttons-n">1</li>
+            <li class="buttons-n">0</li>
+            <li class="buttons-n">.</li>
+            <li class="buttons-n">=</li>
+          </ul>
         </div>
-        <div class="number-container">
-            <div class="numbers">
-                <!-- ul>li.buttons{textValue $}*5 -->
-                <ul>
-                    <li class="buttons-n">9</li>
-                    <li class="buttons-n">8</li>
-                    <li class="buttons-n">7</li>
-                    <li class="buttons-n">6</li>
-                    <li class="buttons-n">5</li>
-                    <li class="buttons-n">4</li>
-                    <li class="buttons-n">3</li>
-                    <li class="buttons-n">2</li>
-                    <li class="buttons-n">1</li>
-                    <li class="buttons-n">0</li>
-                    <li class="buttons-n">.</li>
-                    <li class="buttons-n">=</li>
-                </ul>
-            </div>
-            <div class="operations">
-                <ul>
-                    <i class="fa-solid fa-plus"></i>
-                    <i class="fa-solid fa-minus"></i>
-                    <i class="fa-solid fa-xmark"></i>
-                    <i class="fa-solid fa-divide"></i>
-                    <i class="fa-solid fa-percent"></i>
-                    <i class="fa-solid fa-square-root"></i>
-                </ul>
-            </div>
+        <div>
+          <ul class="operations">
+            <i class="fa-solid fa-divide buttons-o"></i>
+            <i class="fa-solid fa-percent buttons-o"></i>
+            <i class="fa-solid fa-square-root-variable buttons-o"></i>
+            <i class="fa-solid fa-plus buttons-o"></i>
+            <i class="fa-solid fa-minus buttons-o"></i>
+            <i class="fa-solid fa-xmark buttons-o"></i>
+          </ul>
         </div>
-
+      </div>
     </section>
-
-    
-</body>
+  </body>
 </html>
