Refactoring the HTML's semantic

--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
         <div class="">
           <!-- ul>li.buttons{textValue $}*5 -->
           <ul class="numbers">
-            <li class="buttons-n">9</li>
-            <li class="buttons-n">8</li>
-            <li class="buttons-n">7</li>
-            <li class="buttons-n">6</li>
-            <li class="buttons-n">5</li>
-            <li class="buttons-n">4</li>
-            <li class="buttons-n">3</li>
-            <li class="buttons-n">2</li>
-            <li class="buttons-n">1</li>
-            <li class="buttons-n">0</li>
-            <li class="buttons-n">.</li>
-            <li class="buttons-n">=</li>
+            <button class="buttons-n">9</button>
+            <button class="buttons-n">8</button>
+            <button class="buttons-n">7</button>
+            <button class="buttons-n">6</button>
+            <button class="buttons-n">5</button>
+            <button class="buttons-n">4</button>
+            <button class="buttons-n">3</button>
+            <button class="buttons-n">2</button>
+            <button class="buttons-n">1</button>
+            <button class="buttons-n">0</button>
+            <button class="buttons-n">.</button>
+            <button class="buttons-n">=</button>
           </ul>
         </div>
         <div>
           <ul class="operations">
-            <i class="fa-solid fa-divide buttons-o"></i>
-            <i class="fa-solid fa-percent buttons-o"></i>
-            <i class="fa-solid fa-square-root-variable buttons-o"></i>
-            <i class="fa-solid fa-plus buttons-o"></i>
-            <i class="fa-solid fa-minus buttons-o"></i>
-            <i class="fa-solid fa-xmark buttons-o"></i>
+            <button class="fa-solid fa-divide buttons-o"></button>
+            <button class="fa-solid fa-percent buttons-o"></button>
+            <button class="fa-solid fa-square-root-variable buttons-o"></button>
+            <button class="fa-solid fa-plus buttons-o"></button>
+            <button class="fa-solid fa-minus buttons-o"></button>
+            <button class="fa-solid fa-xmark buttons-o"></button>
           </ul>
         </div>
       </div>
