Transforming into a TS project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     ></script>
 
     <title>Calculator</title>
+
+    <!-- A DEFINIR -->
+    <script src="./dist/js" defer></script>
   </head>
   <body>
     <section class="calculator-container">
