Starting the TS code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Calculator</title>
 
     <!-- A DEFINIR -->
-    <script src="./dist/js" defer></script>
+    <script src="./dist/js/index.js" defer></script>
   </head>
   <body>
     <section class="calculator-container">
