Creating foreach function to identify numbers

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="calculator-container">
       <div class="display-screen">
         <span class="display-numbers--calc" id="calc">100</span>
-        <span class="display-numbers--result" id="result">100</span>
+        <span class="display-numbers--current" id="current">100</span>
       </div>
       <div class="pads-container">
         <div class="">
