Making sum and showing on display

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         <div class="">
           <!-- ul>li.buttons{textValue $}*5 -->
           <ul class="numbers">
-            <button class="buttons-n">9</button>
-            <button class="buttons-n">8</button>
-            <button class="buttons-n">7</button>
-            <button class="buttons-n">6</button>
-            <button class="buttons-n">5</button>
-            <button class="buttons-n">4</button>
-            <button class="buttons-n">3</button>
-            <button class="buttons-n">2</button>
-            <button class="buttons-n">1</button>
-            <button class="buttons-n">0</button>
-            <button class="buttons-n">.</button>
-            <button class="buttons-n">=</button>
+            <button class="buttons-n" data-int="9">9</button>
+            <button class="buttons-n" data-int="8">8</button>
+            <button class="buttons-n" data-int="7">7</button>
+            <button class="buttons-n" data-int="6">6</button>
+            <button class="buttons-n" data-int="5">5</button>
+            <button class="buttons-n" data-int="4">4</button>
+            <button class="buttons-n" data-int="3">3</button>
+            <button class="buttons-n" data-int="2">2</button>
+            <button class="buttons-n" data-int="1">1</button>
+            <button class="buttons-n" data-int="0">0</button>
+            <button class="buttons-n" data-int=".">.</button>
+            <button class="buttons-n" data-int="=">=</button>
           </ul>
         </div>
         <div>
