--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button class="fa-solid fa-square-root-variable buttons-o" data-op="root"></button>
             <button class="fa-solid fa-plus buttons-o" data-op="+"></button>
             <button class="fa-solid fa-minus buttons-o" data-op="-"></button>
-            <button class="fa-solid fa-xmark buttons-o" data-op="x"></button>
+            <button class="fa-solid fa-xmark buttons-o" data-op="*"></button>
           </ul>
         </div>
       </div>
