Adding more buttons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <button class="fa-solid fa-plus buttons-o" data-op="+"></button>
             <button class="fa-solid fa-minus buttons-o" data-op="-"></button>
             <button class="fa-solid fa-xmark buttons-o" data-op="*"></button>
+            <button class="buttons-o"" data-op="(">(</button>
+            <button class="buttons-o"" data-op=")">)</button>
           </ul>
         </div>
       </div>
