Remaking the display layout

--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
   <body>
     <section class="calculator-container">
       <div class="display-screen">
-        <span class="display-numbers--calc" id="calc"></span>
-        <span class="display-numbers--current" id="currentDisplay"></span>
+        <div>
+          <span class="display-numbers--calc" id="calc"></span>
+        </div>
+        <div class="operations-n">
+          <span class="display-numbers--result" id="result"></span>
+          <span class="display-numbers--current" id="currentDisplay"></span>
+        </div>
       </div>
-      <div class="pads-container">
+        <div class="pads-container">
         <div class="">
           <!-- ul>li.buttons{textValue $}*5 -->
           <ul class="numbers">
