--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         </div>
         <div>
           <ul class="operations">
-            <button class="fa-solid fa-divide buttons-o" data-op="/"></button>
-            <button class="fa-solid fa-percent buttons-o" data-op="per"></button>
-            <button class="fa-solid fa-square-root-variable buttons-o" data-op="root"></button>
-            <button class="fa-solid fa-plus buttons-o" data-op="+"></button>
-            <button class="fa-solid fa-minus buttons-o" data-op="-"></button>
-            <button class="fa-solid fa-xmark buttons-o" data-op="*"></button>
-            <button class="buttons-o"" data-op="(">(</button>
-            <button class="buttons-o"" data-op=")">)</button>
+            <button class="fa-solid fa-divide buttons-o" data-int="/">/</button>
+            <button class="fa-solid fa-percent buttons-o" data-int="per"></button>
+            <button class="fa-solid fa-square-root-variable buttons-o" data-int="root"></button>
+            <button class="fa-solid fa-plus buttons-o" data-int="+"></button>
+            <button class="fa-solid fa-minus buttons-o" data-int="-"></button>
+            <button class="fa-solid fa-xmark buttons-o" data-int="*"></button>
+            <button class="buttons-o"" data-int="(">(</button>
+            <button class="buttons-o"" data-int=")">)</button>
           </ul>
         </div>
       </div>
