Changing the logic of buttons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <button class="fa-solid fa-plus buttons-o" data-int="+"></button>
             <button class="fa-solid fa-minus buttons-o" data-int="-"></button>
             <button class="fa-solid fa-xmark buttons-o" data-int="*"></button>
-            <button class="buttons-o"" data-int="(">(</button>
-            <button class="buttons-o"" data-int=")">)</button>
+            <!-- <button class="buttons-o"" data-int="(">(</button> -->
+            <!-- <button class="buttons-o"" data-int=")">)</button> -->
           </ul>
         </div>
       </div>
