--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
         <div>
           <ul class="operations">
-            <button class="fa-solid fa-divide buttons-o" data-int="">Limpar</button>
-            <button class="fa-solid fa-divide buttons-o" data-int="">Apagar</button>
+            <!-- <button class="fa-solid fa-divide buttons-o" data-int="">Limpar</button>
+            <button class="fa-solid fa-divide buttons-o" data-int="">Apagar</button> -->
             <button class="fa-solid fa-divide buttons-o" data-int="/"></button>
             <button class="fa-solid fa-percent buttons-o" data-int="per"></button>
             <button class="fa-solid fa-square-root-variable buttons-o" data-int="root"></button>
