Adding two more buttons, changing the css

--- a/index.html
+++ b/index.html
@@ -55,15 +55,19 @@
         <div>
           <ul class="operations">
             <!-- <button class="fa-solid fa-divide buttons-o" data-int="">Limpar</button>
-            <button class="fa-solid fa-divide buttons-o" data-int="">Apagar</button> -->
-            <button class="fa-solid fa-divide buttons-o" data-int="/"></button>
-            <button class="fa-solid fa-percent buttons-o" data-int="per"></button>
-            <button class="fa-solid fa-square-root-variable buttons-o" data-int="root"></button>
-            <button class="fa-solid fa-plus buttons-o" data-int="+"></button>
-            <button class="fa-solid fa-minus buttons-o" data-int="-"></button>
-            <button class="fa-solid fa-xmark buttons-o" data-int="*"></button>
-            <!-- <button class="buttons-o"" data-int="(">(</button> -->
-            <!-- <button class="buttons-o"" data-int=")">)</button> -->
+            <button class="fa-solid fa-divide buttons-o" data-int="">Apagar</button> -->    
+            <div class="operations-math">
+              <button class="fa-solid fa-divide buttons-o" data-int="/"></button>
+              <button class="fa-solid fa-percent buttons-o" data-int="per"></button>
+              <button class="fa-solid fa-square-root-variable buttons-o" data-int="root"></button>
+              <button class="fa-solid fa-plus buttons-o" data-int="+"></button>
+              <button class="fa-solid fa-minus buttons-o" data-int="-"></button>
+              <button class="fa-solid fa-xmark buttons-o" data-int="*"></button>
+            </div>
+            <div>
+              <button class="fa-solid fa-divide buttons-c" data-int="delete">A.C</button>
+              <button class="fa-solid fa-divide buttons-c" data-int="delete">Deletar</button>
+            </div>
           </ul>
         </div>
       </div>
