Making button to delete

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- <button class="fa-solid fa-divide buttons-o" data-int="">Limpar</button>
             <button class="fa-solid fa-divide buttons-o" data-int="">Apagar</button> -->    
             <div class="operations-edit">
-              <button class="buttons-c" data-int="delete">CE</button>
+              <button class="buttons-c" data-int="delete-all">CE</button>
               <button class="buttons-c" data-int="delete">C</button>
             </div>
             <div class="operations-math">
