Changing logic of equal button. Refactoring

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <button class="button buttons-n" data-int="1">1</button>
             <button class="button buttons-n" data-int="0">0</button>
             <button class="button buttons-n" data-int=".">.</button>
-            <button id="equal" class="button buttons-n">=</button>
+            <!-- <button id="equal" class="buttons-equal " data-int="=">=</button> -->
+            <button id="equal" class="buttons-n" data-int="=">=</button>
           </ul>
         </div>
         <div class="pad">
