Making the button equal calculate

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button class="button buttons-n" data-int="0">0</button>
             <button class="button buttons-n" data-int=".">.</button>
             <!-- <button id="equal" class="buttons-equal " data-int="=">=</button> -->
-            <button id="equal" class="buttons-n" data-int="=">=</button>
+            <button id="equal" class="button buttons-o" data-int="=">=</button>
           </ul>
         </div>
         <div class="pad">
