Chanking equal button style

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button class="button buttons-n" data-int="0">0</button>
             <button class="button buttons-n" data-int=".">.</button>
             <!-- <button id="equal" class="buttons-equal " data-int="=">=</button> -->
-            <button id="equal" class="button buttons-o" data-int="=">=</button>
+            <button class="button buttons-o" id="equal" data-int="=">=</button>
           </ul>
         </div>
         <div class="pad">
@@ -65,7 +65,7 @@
             </div>
             <div class="operations-math">
               <button class="fa-solid fa-divide button buttons-o" data-int="/"></button>
-              <button class="fa-solid fa-percent button buttons-o" data-int="per"></button>
+              <button class="fa-solid fa-percent button buttons-o" data-int="%"></button>
               <button class="fa-solid fa-square-root-variable button buttons-o" data-int="root"></button>
               <button class="fa-solid fa-xmark button buttons-o" data-int="*"></button>
               <button class="fa-solid fa-minus button buttons-o" data-int="-"></button>
