Creating the funtion to square root

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="operations-math">
               <button class="fa-solid fa-divide button buttons-o" data-int="/"></button>
               <button class="fa-solid fa-percent button buttons-o" data-int="%"></button>
-              <button class="fa-solid fa-square-root-variable button buttons-o" data-int="r"></button>
+              <button class="fa-solid fa-square-root-variable button buttons-o" data-int="√"></button>
               <button class="fa-solid fa-xmark button buttons-o" data-int="*"></button>
               <button class="fa-solid fa-minus button buttons-o" data-int="-"></button>
               <button class="fa-solid fa-plus button buttons-o" data-int="+"></button>
