Setting the year automatically in the copywrite part

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           </section>
         </div>
       </div>
+      <footer class="copywrite">
+        <!-- innerHTML below made with JS to set year automatically -->
+        <span id="project_Year"></span>
+      </footer>   
     </section>
   </body>
 </html>
